--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -13202,3 +13202,32 @@ body {
   background-color: #AD0506 !important;
   color: white;
 }
+
+
+/* inicio probando codigo para componente MonthComponent */
+/* MonthComponent.css */
+/* .month-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+} */
+
+/* .day-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 5px;
+} */
+
+/* .attendance-info {
+  display: flex;
+  gap: 5px;
+} */
+
+.attendance-day {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+}
+
+/* fin probando codigo */
