--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -9051,6 +9051,10 @@ fieldset:disabled .btn {
   font-size: 1rem !important;
 }
 
+.fs-7 {
+  font-size: .9rem;
+}
+
 .fst-italic {
   font-style: italic !important;
 }
@@ -13298,5 +13302,7 @@ button.tab-link-types-control.nav-link {
 .custom-datatable .tss-1qtl85h-MUIDataTableBodyCell-root {
   padding-left: 5px;
 }
+
+
 
 /* fin probando codigo */
