--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -12698,6 +12698,15 @@ fieldset:disabled .btn {
 }
 
 @media print {
+
+  body {
+    margin: 0;
+  }
+
+  nav.sb-topnav.navbar.navbar-expand {
+    display: none !important;
+  }
+
   .d-print-inline {
     display: inline !important;
   }
@@ -13291,18 +13300,24 @@ button.tab-link-types-control.nav-link {
 }
 .custom-datatable td
 {
+  background-color: rgb(231, 241, 255);
   padding: 0 5px;
-
+  
 }
 
 .custom-datatable th {
   padding: 7px;
+  background-color: rgb(231, 241, 255);
 }
 
 .custom-datatable .tss-1qtl85h-MUIDataTableBodyCell-root {
   padding-left: 5px;
 }
 
+.custom-datatable .MuiPaper-root.MuiPaper-elevation {
+  background-color: rgb(231, 241, 255);
+
+}
 
 .image-inicio-container {
   display: flex;
