--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -12703,6 +12703,10 @@ fieldset:disabled .btn {
     margin: 0;
   }
 
+  .btn-print-container {
+    display: none !important;
+  }
+
   nav.sb-topnav.navbar.navbar-expand {
     display: none !important;
   }
